test/spec_vectors/f32_cmp/fail/module_5.wat
(module (func (result f32) (f32.lt (i64.const 0) (f64.const 0))))